@startuml Training Management System - ERD

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) #x#

skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

table(users) {
    primary_key(id) BIGINT
    username VARCHAR(50)
    first_name VARCHAR(50)
    last_name VARCHAR(50)
    email VARCHAR(100)
    phone VARCHAR(20)
    password VARCHAR(255)
    birth_date DATE
    role VARCHAR(20)
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(training_programs) {
    primary_key(id) BIGINT
    title VARCHAR(100)
    description TEXT
    foreign_key(created_by) BIGINT
    status VARCHAR(20)
    start_date DATE
    end_date DATE
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(courses) {
    primary_key(id) BIGINT
    foreign_key(training_program_id) BIGINT
    title VARCHAR(100)
    description TEXT
    category VARCHAR(50)
    duration INTEGER
    price DECIMAL(10,2)
    foreign_key(assigned_trainer_id) BIGINT
    status VARCHAR(20)
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(sessions) {
    primary_key(id) BIGINT
    foreign_key(course_id) BIGINT
    title VARCHAR(100)
    notes TEXT
    scheduled_datetime TIMESTAMP
    duration INTEGER
    location VARCHAR(100)
    status VARCHAR(20)
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(materials) {
    primary_key(id) BIGINT
    foreign_key(session_id) BIGINT
    title VARCHAR(100)
    description TEXT
    file_path VARCHAR(255)
    file_type VARCHAR(50)
    foreign_key(uploaded_by) BIGINT
    uploaded_at TIMESTAMP
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(enrollments) {
    primary_key(id) BIGINT
    foreign_key(trainee_id) BIGINT
    foreign_key(training_program_id) BIGINT
    enrollment_date DATE
    status VARCHAR(20)
    completion_date DATE
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(attendance) {
    primary_key(id) BIGINT
    foreign_key(session_id) BIGINT
    foreign_key(trainee_id) BIGINT
    attended BOOLEAN
    check_in_time TIMESTAMP
    check_out_time TIMESTAMP
    notes TEXT
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(assessments) {
    primary_key(id) BIGINT
    foreign_key(course_id) BIGINT
    title VARCHAR(100)
    description TEXT
    total_marks INTEGER
    passing_marks INTEGER
    due_date TIMESTAMP
    foreign_key(created_by) BIGINT
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

table(assessment_results) {
    primary_key(id) BIGINT
    foreign_key(assessment_id) BIGINT
    foreign_key(trainee_id) BIGINT
    marks_obtained INTEGER
    submitted_at TIMESTAMP
    foreign_key(graded_by) BIGINT
    feedback TEXT
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

' Relationships
users ||--o{ training_programs : "creates"
users ||--o{ courses : "trains"
users ||--o{ enrollments : "enrolls"
users ||--o{ materials : "uploads"
users ||--o{ assessments : "creates"
users ||--o{ assessment_results : "grades"

training_programs ||--o{ courses
courses ||--o{ sessions
sessions ||--o{ materials
sessions ||--o{ attendance
courses ||--o{ assessments
assessments ||--o{ assessment_results
training_programs ||--o{ enrollments

@enduml 